Sat Apr 24 13:06:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (get_arglen): skip the last terminator of argv before
	  checking environ.

	* ruby.c (get_arglen): duplicate environ area if setenv and unsetenv
	  are provided.

	* ruby.c (set_arg0): keep empty strings.

Sat Apr 24 09:44:40 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/yaml2byte.c (bytestring_append, bytestring_extend):
	  removed wrong extra assignments.  a patch from Marcus Rueckert
	  <darix AT opensu.se> at [ruby-core:29759].

Fri Apr 23 18:52:13 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_val2variant): fix the core dump
	  when converting Array object to VT_ARRAY variant. [ruby-core:28446]
	  [Bug #2836]

Fri Apr 23 14:07:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* doc/etc.rd, doc/etc.rd.ja: moved from ext/etc.

	* ext/etc.c (Init_etc): fixed rdoc.

Tue Apr 20 00:43:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_extname): skip last directory separators.
	  [ruby-core:29627]

Mon Apr 19 19:42:08 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::cp_r): dup needed here; options are
	  destroyed otherwise.

Mon Apr 19 19:13:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (search_required): expand home relative path first.
	  [ruby-core:29610]

Mon Apr 19 12:46:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/timeout.rb (Timeout#timeout): propagate errors to the
	  caller.  [ruby-dev:41010]'

Sat Apr 17 09:04:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-{ruby-version,{site,vendor}dir}): use
	  AS_HELP_STRING.

Sat Apr 17 08:57:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP#rcptto_list): continue when at least
	  one RCPT is accepted.  based on a patch from Kero van Gelder at
	  [ruby-core:26190].

Sat Apr 17 08:35:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
